--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <title>CONFLUX Design</title>
+    <link href="/css/styles.css" rel="stylesheet">
+  </head>
+  <body>
+     <div class="layer">  <div class="circle">  </div> </div>
+  </body>
 </html>
