--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, width=device-width">
-    <title>CONFLUX Design</title>
-    <link href="css/styles.css" rel="stylesheet">
-  </head>
-  <body>
-     <div class="layer">  <div class="circle">  </div> </div>
-  </body>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>CONFLUX</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+
+  <div class="layer">  <div class="circle">  </div> </div>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+</body>
+
 </html>
