--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
 
   <div class="layer">  <div class="circle">  </div> </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <div class="discuss"> <a href="http://discuss.conflux.network">discuss.conflux.network</a></div>
 
+
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </body>
 
 </html>
